--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy
-pandas
-scikit-learn
-statsmodels
-econml
+numpy==1.26.4
+pandas==2.2.1
+scikit-learn==1.4.1.post1
+statsmodels==0.14.1
+econml==0.15.0
